--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                                         </blockquote>
                                     </div>
                                 <div class="desc" style="text-align: justify">
-                                    With <font style="color: rgb(242,103,33)">complex problems</font>, creativity requires courage, and change requires perseverance. 
+                                    With <font style="font-size: 135%; color: rgb(242,103,33)">complex problems</font>, creativity requires courage, and change requires perseverance. 
                                     I can help to set in motion, the chain-reaction of innovation by making intricate problems tangible with the help of a rock-solid vision. 
                                     This is because, in order to be successful, innovation and creativity should be seen as a state of mind, and not the product of logical thought. 
                                     </br></br>
@@ -350,7 +350,7 @@
                                         </blockquote>
                                     </div>
                                 <div class="desc" style="text-align: justify;">
-                                          In <font style="color: rgb(242,103,33)"> dynamic environments </font>, that are subject to non-linear change, co-creation is key to success in innovation. I can help to create support for solutions within large corporations, and my resilience ensures an outcome that suits both the company's resources, and it's customer needs. 
+                                          In <font style="font-size: 135%; color: rgb(242,103,33)"> dynamic environments </font>, that are subject to non-linear change, co-creation is key to success in innovation. I can help to create support for solutions within large corporations, and my resilience ensures an outcome that suits both the company's resources, and it's customer needs. 
                                           </br></br></br>
                                 </div>
                                 </div>
@@ -401,11 +401,11 @@
                              <div class="col-md-12">
                                 <div class="blog-post">
                                         <blockquote class="quote-post">
-                                            <p>implementing into brand DNA</p>
+                                            <p>wire solution into brand DNA</p>
                                         </blockquote>
                                     </div>
                                 <div class="desc" style="text-align: justify">
-                                     Design and innovations is not solely about providing solutions. It is about <font style="color: rgb(242,103,33)">changing a mindset</font>, and implementing the solution seamlessly into the daily operations. I am able to create support for the solution, and gradually implement the solution into the Brand DNA, without disturbing the daily practices. 
+                                     Design and innovations is not solely about providing solutions. It is about <font style="font-size: 135%; color: rgb(242,103,33)">changing a mindset</font>, and implementing the solution seamlessly into the daily operations. I am able to create support for the solution, and gradually implement the solution into the Brand DNA, without disturbing the daily practices. 
                                      </br></br></br>
                                 </div>
                                 </div>
@@ -520,20 +520,20 @@
                             </div>
                             <div class="col-md-6 wow fadeInRight">
                                 <div class="light-txt space">
-                                    <h2 class="text-uppercase light-txt"><font >Disruption Supply Chain G4S</font></h2>
+                                    <h3 class="text-uppercase light-txt"><font>Supply Chain Disruption G4S</font></h3>
                                      <h2 style="display:inline; color: white">01 </h2> 
                                     <h4 class="text-uppercase light-txt" style="display: inline">Problem</h4>
                                     <p class="light-txt" style="text-align: justify">
-                                        in 2012, G4S, formerly Group 4 Securicor, experienced the effect of globalisation. The combination of bad publicity, and the increased amount, complexity and mutual dependence of organisations lead to reputational damage which resulted in a fragile supply chain, and a brittle relationship between end-consumers.</p>
+                                        in 2012, G4S, formerly Group 4 Securicor, experienced the effect of globalisation. Bad publicity shifted public opinion towards G4S, pressuring all of the stakeholders of its supply chain. The big amount, complexity and mutual dependence of corporations lead to reputational damage for all involved, a fragile supply chain, and a brittle relationship between end-consumers.</p>
                                          <h2 style="display:inline; color: white">02 </h2> 
                                          <h4 class="text-uppercase light-txt" style="display: inline">Solution</h4>
                                          <p class="light-txt" style="text-align: justify">
-                                    We recognised that an increased need for proper risk management from a consumer perspective is needed in order to retain a positive image and prevent supply chain disruptions. 
+                                    We recognised an increased need for proper risk management from a consumer perspective in order to retain a positive image and prevent supply chain disruptions. Hereby we implemented human-centeredness into the new Brand DNA, taking into account end-consumer relationships.
                                     </p>
                                      <h2 style="display:inline; color: white">03 </h2> 
                                     <h4 class="text-uppercase light-txt" style="display: inline">Result</h4>
                                          <p class="light-txt" style="text-align: justify">
-                                    The new Brand DNA, taking into account end-consumer relationships, has ensured that the global security market is increasingly being recognised as an essential par for outsourcing capital-intensive risk strategies.  
+                                    The new Brand DNA not only prevented major business disruptions for G4S, but also ensured that the global security market is increasingly being recognised as an essential partner for outsourcing capital-intensive risk strategies.  
                                     </p>
                                 </div>
                             </div>
