--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                 <a href="#home" data-scroll>Home</a>
                             </li>
                             <li  class="">
-                                <a href="#start" data-scroll>About</a>
+                                <a href="#start" data-scroll>Need for Innovation</a>
                             </li>
                             <li  class="">
                                 <a href="#problem" data-scroll>Problem</a>
@@ -74,7 +74,7 @@
                                 <a href="#process" data-scroll>Process</a>
                             </li>
                              <li  class="">
-                                <a href="#usecase" data-scroll>Usecase</a>
+                                <a href="#usecase" data-scroll>Showcase</a>
                             </li>
                             <li  class="">
                                 <a href="#blog" data-scroll>Blog</a>
@@ -168,7 +168,7 @@
                                     <h4 style="display: inline">Survival Rate</h4>
                                 </div>
                                  <div class="desc" style="text-align: justify" style="cursor: pointer; cursor;">
-                                    When looking at the Fortune 500 from 1960, only 60 out of 500 corporations are still on the list<sup><a href="#fn2" id="ref2">2</a></sup>. Many of those companies operated on B2B level and seemed immortal at the time. This illustrated that even big corporations struggle with continuous innovation and adaption to trends and needs. Even more so, as can be seen in the graph below <sup><a href="#fn3" id="ref3">3</a></sup>, the expected lifetime of a company is gradually decreasing, and projected to be only 18 year in 2027<sup><a href="#fn4" id="ref4">4</a></sup>.
+                                    When looking at the Fortune 500 from 1960, only 60 out of 500 corporations are still on the list<sup><a href="#fn2" id="ref2">2</a></sup>. Many of those companies operated on Business-to-Business (B2B) level and seemed immortal at the time. This illustrated that even big corporations struggle with continuous innovation and adaption to trends and needs. Even more so, as can be seen in the graph below <sup><a href="#fn3" id="ref3">3</a></sup>, the expected lifetime of a company is gradually decreasing, and projected to be only 18 year in 2027<sup><a href="#fn4" id="ref4">4</a></sup>.
                                 </div>
                                  <div id="graph1" style="display: none">
                                 <div class="divider d-border d-solid d-single text-center">
@@ -188,9 +188,9 @@
                                     <i class="icon-caution"></i>
                                 </div>
                                 <div class="title text-uppercase">
-                                    <h4 style="display: inline">overestimating demand</h4>
                                     <h1 class="timer" data-from="0" data-to="35" data-speed="2500" style="display: inline"></h1>
                                     <h1 style="display: inline">%</h1>
+                                    <h4 style="display: inline">overestimation of demand</h4>
                                 </div>
                                 <div class="desc" style="text-align: justify" style="cursor: pointer; cursor;">
                                     Because of the so called "Bullwhip Effect", a demand of ↑5% on consumer level may be interpreted by the supply chains as a change in demand of up to ↑40%. Distorted information from one end of a supply chain to the other can lead to tremendous inefficiencies: excessive inventory investment, poor customer service, lost revenues, misguided capacity plans, ineffective transportation, and missed production schedules<sup><a href="#fn5" id="ref5">5</a></sup>. Above this, researched indicated that only +/- 9% of companies are fully prepared for supply chain disruptions such as these<sup><a href="#fn9" id="ref9">9</a></sup>. 
@@ -235,7 +235,7 @@
                                 </div>
                                     </div>
                                     <div class="desc" style="text-align: justify">
-                                     In Business-to-Business settings corporations tend to start experiencing <font style="font-size: 120%; color: white; opacity: 0.7">difficulties with innovation</font><sup><a href="#fn8" id="ref8">8</a></sup> once they grow too large. This is mainly because the corporations shift from an innovation or technology driven mindset, to a <font style="font-size: 120%; color: white; opacity: 0.7">risk-reduction mindset</font><sup><a href="#fn7" id="ref7">7</a></sup>. The companies do not dare to innovate because of the fear of making bad investment decision which could jeopardize their competitive advantage. </br></br>
+                                     In B2B settings corporations tend to start experiencing <font style="font-size: 120%; color: white; opacity: 0.7">difficulties with innovation</font><sup><a href="#fn8" id="ref8">8</a></sup> once they grow too large. This is mainly because these corporations shift from an innovation or technology driven mindset, to a <font style="font-size: 120%; color: white; opacity: 0.7">risk-reduction mindset</font><sup><a href="#fn7" id="ref7">7</a></sup>. The companies do not dare to innovate because of the fear of making bad investment decision which could jeopardize their competitive advantage. </br></br>
 
                                      Besides this, the end-customer are key figure and their needs, values and opinions will affect the whole supply chain<sup><a href="#fn1" id="ref9">9</a></sup>. However, as other companies within the B2B supply chain act as 'barriers' many companies <font style="font-size: 120%; color: white; opacity: 0.7">lose sight of end-consumers</font>. Furthermore, because of the scale of the corporations, and the many stakeholders involved in a supply chain, companies often have to deal with <font style="font-size: 120%; color: white; opacity: 0.7">conflict of interest</font>.</br></br>
                                 </div>
@@ -512,10 +512,10 @@
                 <div class="relative page-content">
                     <div class="dark-overlay wow fadeInRight"></div>
                     <div class="container">
-                        <div class="row">
+                        <div class="row" >
                             <div class="col-md-6">
-                                <div class="v-middle">
-                                    <h3 class="light-txt text-uppercase"><font style="color: #222222; font-size: 200%">Experience</font></h3>
+                                <div class="v-middle wow fadeInLeft">
+                                     <img src="img/parallax/G4S.png" alt="" style="opacity: 0.75; width: 90%; display: block; margin-left: auto; margin-right: auto; margin-top: auto; margin-bottom: auto;">
                                 </div>
                             </div>
                             <div class="col-md-6 wow fadeInRight">
@@ -552,25 +552,25 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="v-middle">
-                                    <h3 class="light-txt text-uppercase"><font style="color: #222222; font-size: 200%">Experience</font></h3>
+                                     <img src="img/parallax/Maersk.png" alt="" style="opacity: 0.75; width: 75%; display: block; margin-left: auto; margin-right: auto; margin-top: auto; margin-bottom: auto;">
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="light-txt space">
-                                    <h2 class="text-uppercase light-txt"><font >Brand DNA Deloitte</font></h2>
+                                    <h3 class="text-uppercase light-txt"><font >Rewiring Strategy Maersk Line</font></h3>
                                      <h2 style="display:inline; color: white" >01 </h2> 
                                     <h4 class="text-uppercase light-txt" style="display: inline">Problem</h4>
                                     <p class="light-txt" style="text-align: justify">
-                                        Deloitte’s Energy & Resources specialists provide comprehensive, integrated solutions to all segments of the Oil & Gas, Power & Utilities, Alternative Energy, and Mining sectors. We offer clients exceptionally detailed industry knowledge and a global network, alongside local market delivery.</p>
+                                        Maersk Line, a (container shipping) lining company. sells distribution services to their customers through "agencies". These agencies formed barriers, which made Maersk Line prone to supply chain disruptions.</p>
                                         <h2 style="display:inline; color: white">02 </h2> 
                                          <h4 class="text-uppercase light-txt" style="display: inline">Solution</h4>
                                          <p class="light-txt" style="text-align: justify">
-                                    We recognised that an increased need for proper risk management from a consumer perspective is needed in order to retain a positive image and prevent supply chain disruptions. 
+                                    We identified that Maersk Line could seriously improve the efficiency of it's value chain by eliminating the middle man (agencies) for collaborations with big corporations. This way, Maersk would be in direct contact with it's customers, enabling them to responds better to the market's demand. 
                                     </p>
                                     <h2 style="display:inline; color: white">03 </h2> 
                                     <h4 class="text-uppercase light-txt" style="display: inline">Result</h4>
                                          <p class="light-txt" style="text-align: justify">
-                                    The new Brand DNA, taking into account end-consumer relationships, has ensured that the global security market is increasingly being recognised as an essential par for outsourcing capital-intensive risk strategies.  
+                                    The new strategy brought Maersk line closer to their customers, and enabled them to innovate directly with their clients. Furthermore, because of ruling out the fee of the middleman for the 'big fish', Maersk line's profits increased considerably.   
                                     </p>
                                 </div>
                             </div>
