--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                                     <div class="timeline-desk">
                                         <div class="panel">
                                             <div class="panel-body">
-                                                <span class="timeline-icon gly-spin" style="background: rgb(242,103,33)">
+                                                <span class="timeline-icon" style="background: rgb(242,103,33)">
                                                     <i class="icon-arrows_rotate"></i>
                                                 </span>
                                                  <span class="timeline-date">Step 1</span>
@@ -360,7 +360,7 @@
                                         <div class="panel">
                                             <div class="panel-body">
                                                 <span class="timeline-icon" style="background: rgb(242,103,33)">
-                                                    <i class="icon-strategy"></i>
+                                                    <i class="icon-user_comment"></i>
                                                 </span>
                                                 <span class="timeline-date">Step 2</span>
                                                  <div class="text-left m-bot-50 wow fadeInRight" style="margin-left: -15px; margin-top: -15px">
@@ -415,7 +415,7 @@
                                         <div class="panel">
                                             <div class="panel-body">
                                                 <span class="timeline-icon" style="background: rgb(242,103,33)">
-                                                    <i class="icon-user_comment"></i>
+                                                    <i class="icon-strategy"></i>
                                                 </span>
                                                 <span class="timeline-date">Step 3</span>
                                                  <div class="text-left m-bot-50 wow fadeInRight" style="margin-left: -15px; margin-top: -15px">
