--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                     <h4 style="display: inline">Survival Rate</h4>
                                 </div>
                                  <div class="desc" style="text-align: justify" style="cursor: pointer; cursor;">
-                                    When looking at the Fortune 500 from 1960, only 60 out of 500 corporations are still on the list<sup><a href="#fn2" id="ref2">2</a></sup>. Many of those companies operated on Business-to-Business (B2B) level and seemed immortal at the time. This illustrated that even big corporations struggle with continuous innovation and adaption to trends and needs. Even more so, as can be seen in the graph below <sup><a href="#fn3" id="ref3">3</a></sup>, the expected lifetime of a company is gradually decreasing, and projected to be only 18 year in 2027<sup><a href="#fn4" id="ref4">4</a></sup>.
+                                    When looking at the Fortune 500 from 1960, only 60 out of 500 corporations are still on the list<sup><a href="#fn2" id="ref2">2</a></sup>. Many of those companies operated on Business-to-Business (B2B) level and seemed immortal at the time. This illustrated that even big corporations struggle with continuous innovation and adaption to trends and needs. Even more so, as can be seen in the graph below <sup><a href="#fn3" id="ref3">3</a></sup>, the expected lifetime of a company is gradually decreasing, and projected to be only 18 year in 2027<sup><a href="#fn4" id="ref4">4</a></sup>.</br></br>
                                 </div>
                                  <div id="graph1" style="display: none">
                                 <div class="divider d-border d-solid d-single text-center">
@@ -235,16 +235,16 @@
                                 </div>
                                     </div>
                                     <div class="desc" style="text-align: justify">
-                                     In B2B settings corporations tend to start experiencing <font style="font-size: 120%; color: white; opacity: 0.7">difficulties with innovation</font><sup><a href="#fn8" id="ref8">8</a></sup> once they grow too large. This is mainly because these corporations shift from an innovation or technology driven mindset, to a <font style="font-size: 120%; color: white; opacity: 0.7">risk-reduction mindset</font><sup><a href="#fn7" id="ref7">7</a></sup>. The companies do not dare to innovate because of the fear of making bad investment decision which could jeopardize their competitive advantage. </br></br>
+                                     The reason behind the <font style="font-size: 120%; color: white; opacity: 0.7">low survival rate</font> of corporations in B2B settings is that corporations tend to start experiencing <font style="font-size: 120%; color: white; opacity: 0.7">difficulties with innovation</font><sup><a href="#fn8" id="ref8">8</a></sup> once they grow too large. This is mainly because these corporations shift from an innovation or technology driven mindset, to a <font style="font-size: 120%; color: white; opacity: 0.7">risk-reduction mindset</font><sup><a href="#fn7" id="ref7">7</a></sup>. The companies do not dare to innovate because of the fear of making bad investment decision which could jeopardize their competitive advantage. </br></br>
 
-                                     Besides this, the end-customer are key figure and their needs, values and opinions will affect the whole supply chain<sup><a href="#fn1" id="ref9">9</a></sup>. However, as other companies within the B2B supply chain act as 'barriers' many companies <font style="font-size: 120%; color: white; opacity: 0.7">lose sight of end-consumers</font>. Furthermore, because of the scale of the corporations, and the many stakeholders involved in a supply chain, companies often have to deal with <font style="font-size: 120%; color: white; opacity: 0.7">conflict of interest</font>.</br></br>
+                                     Furthermore, the reason behind the aforementioned <font style="font-size: 120%; color: white; opacity: 0.7">Bullwhip effect</font> is that corporations, as they grow too large, often <font style="font-size: 120%; color: white; opacity: 0.7">lose sight of end-consumers</font> because other companies within the B2B supply chain act as 'barriers'. This could be dangerous because the end-customer should be seen as key figure, seeing their needs, values and opinions will affect the whole supply chain<sup><a href="#fn1" id="ref9">9</a></sup>. Furthermore, because of the scale of the corporations, and the many stakeholders involved in a supply chain, companies often have to deal with <font style="font-size: 120%; color: white; opacity: 0.7">conflict of interest</font>.</br></br>
                                 </div>
                                     <a href="#" class="btn btn-small btn-light-solid btn-transparent show-detail" onclick="pictureChange()" style="display: inline">Show Solution</a>
                                    <!--<a href="#" class="show-detail" onclick="pictureChange()">View Details</a>-->
                                     <div class="career-details-info" style="background: #222222">
                                         <div class="c-list-row">
                                             <label><font style="color: white">Solution</font></label>
-                                            <div class="info">As an  <font style="font-size: 135%; color: rgb(242,103,33)">B2B innovation consultant</font> within Deloitte, I am able to look at the problem from an outside and <font style="font-size: 120%; color: white; opacity: 0.7">human-centered perspective</font>. Hereby the above problems can be tackled with a design thinking approach, taking the end-consumer into account. The process consists out of 3 important steps</div>
+                                            <div class="info">As an  <font style="font-size: 135%; color: rgb(242,103,33)">B2B innovation consultant</font> within Deloitte, We are able to look at the problem from an outside and <font style="font-size: 120%; color: white; opacity: 0.7">human-centered perspective</font>. Hereby the above problems can be tackled with a design thinking approach, taking the end-consumer into account. The process consists out of 3 important steps:</div>
                                         </div>
                                         <div class="c-list-row">
                                             <label><font style="color: white">Steps</font></label>
@@ -276,9 +276,7 @@
                     <div class="row">
                         <div class="heading-title text-center ">
                             <h1 class="text-uppercase">core process</h1>
-                            <p class="half-txt p-top-30" >My core value is to help industries which are not creative in essence, but have a need for innovation. Hereby my task is to revitalize their innovation strategy, through design. By using working with a design intervention s a core process, I am able to make intangible problems tangible, create support for the solution and implementing innovations that last.
-
-                            The challenge of bringing design thinking such as, human-centredness, experience & emotions to the core of their innovation strategy and products<sup><a href="#fn6" id="ref6">6</a></sup>. </p>
+                            <p class="half-txt p-top-30">Our core value is to help industries which are <font style="font-size: 135%; color: rgb(242,103,33)">not creative in essence</font>, but are in need for innovation. Hereby our task is to revitalize your innovation strategy through design. </br></br> By using the<font style="font-size: 135%; color: rgb(242,103,33)"> Design Intervention</font> as core process, we will overcome the challenge of bringing design thinking such as, human-centredness, experience & emotions to the core of your innovation strategy<sup><a href="#fn6" id="ref6">6</a></sup>.</p>
                         </div>
                          <div class="col-md-12">
                             <!--time line-->
@@ -294,7 +292,7 @@
                                     </div>
                                 <div class="desc" style="text-align: justify">
                                     With <font style="font-size: 135%; color: rgb(242,103,33)">complex problems</font>, creativity requires courage, and change requires perseverance. 
-                                    I can help to set in motion, the chain-reaction of innovation by making intricate problems tangible with the help of a rock-solid vision. 
+                                    we can help to set in motion the chain-reaction of innovation by making intricate problems tangible with the help of our ability to create a <font style="font-size: 135%; color: rgb(242,103,33)">rock-solid vision</font>. 
                                     This is because, in order to be successful, innovation and creativity should be seen as a state of mind, and not the product of logical thought. 
                                     </br></br>
                                     </div>
@@ -322,19 +320,19 @@
                                 <a class="wow fadeDown" href="">Framing the Problem</a>
                             </dt>
                             <dd style="text-align: justify">
-                                With a strategic design intervention, the impact on the corporation is broad. It will have an impact on the offer of the company, how the company works, and even for its vision and culture. This all is taken into account and a planning for the necessary structural and cultural changes are made. 
+                                A strategic design intervention will have an impact on the <font style="color: rgb(242,103,33)">offer</font> of the company, how the company <font style="color: rgb(242,103,33)">works</font>, and even for its <font style="color: rgb(242,103,33)">vision</font> and <font style="color: rgb(242,103,33)">culture</font>. This all is taken into account and a planning for the necessary structural and cultural changes are made. 
                             </dd>
                             <dt>
                                 <a class="wow fadeInDown" href="">Mapping the Company</a>
                             </dt>
                             <dd style="text-align: justify">
-                                It is about understanding the company and its real challenges in order to plan the fitting innovation solution. 
+                                When defining the problem, it is essential to <font style="color: rgb(242,103,33)">understand the culture</font> of the company and identify it's most prominent challenges in order to plan for the fitting innovation solution. 
                             </dd>
                             <dt>
                                 <a class="wow fadeInDown" href="">Mobilising Stakeholders</a>
                             </dt>
                             <dd style="text-align: justify">
-                                Especially within a supply chain, it is essential to identify the important stakeholders, involve them in the process, and prepare them to work with a design approach to innovation. 
+                                Especially within supply chain management, it is essential to <font style="color: rgb(242,103,33)">identify</font> the important stakeholders, <font style="color: rgb(242,103,33)">involve</font> them in the process, and <font style="color: rgb(242,103,33)">prepare</font> them to work with a design approach to innovation. 
                             </dd>
                         </dl>
                         <!-- accordion time line end-->
@@ -350,8 +348,8 @@
                                         </blockquote>
                                     </div>
                                 <div class="desc" style="text-align: justify;">
-                                          In <font style="font-size: 135%; color: rgb(242,103,33)"> dynamic environments </font>, that are subject to non-linear change, co-creation is key to success in innovation. I can help to create support for solutions within large corporations, and my resilience ensures an outcome that suits both the company's resources, and it's customer needs. 
-                                          </br></br></br>
+                                          In <font style="font-size: 135%; color: rgb(242,103,33)"> dynamic environments </font>, that are subject to non-linear change, co-creation is key to success in innovation. We can help to create support for solutions within large corporations, and <font style="font-size: 135%; color: rgb(242,103,33)">our resilience</font> ensures an outcome that suits both the company's resources, and it's customer needs. 
+                                          </br></br>
                                 </div>
                                 </div>
                             </div>
@@ -377,19 +375,19 @@
                                 <a class="wow fadeInDown" href="">Managing the Process</a>
                             </dt>
                             <dd style="text-align: justify">
-                                It is important to choose the right tools and methods for the task. Each problem might require different approaches, but in a B2B setting the end-consumer should always be the underlying theme.
+                                It is important to choose the right tools and methods for the task. Each problem might require different approaches, but in a B2B setting the <font style="color: rgb(242,103,33)">end-consumer</font> should always be the underlying theme.
                             </dd>
                             <dt>
                                 <a class="wow fadeInDown" href="">Adapting the Tools</a>
                             </dt>
                             <dd style="text-align: justify">
-                                After choosing the right tools and methods, it is important to adapt the tools so they fit the problem. 
+                                After choosing the right tools and methods, it is important to customise the tools so they <font style="color: rgb(242,103,33)">fit the problem</font>. Furthermore, the methods should be adapted in order to co-create solutions with the relevant stakeholders.
                             </dd>
                             <dt>
                                 <a class="wow fadeInDown" href="">Involving the Stakeholders</a>
                             </dt>
                             <dd style="text-align: justify">
-                                In order to co-create the outcome, the chosen tools and methods should be used together with the main stakeholders. It is important to involve them in order to create acceptance and commitment for the design approach. 
+                                In order to co-create the outcome, the chosen tools and methods should be used together with the main stakeholders. It is important to involve them in order to create <font style="color: rgb(242,103,33)">acceptance and commitment</font> for the design approach. 
                             </dd>
                         </dl>
                         <!-- accordion time line end-->
@@ -405,8 +403,8 @@
                                         </blockquote>
                                     </div>
                                 <div class="desc" style="text-align: justify">
-                                     Design and innovations is not solely about providing solutions. It is about <font style="font-size: 135%; color: rgb(242,103,33)">changing a mindset</font>, and implementing the solution seamlessly into the daily operations. I am able to create support for the solution, and gradually implement the solution into the Brand DNA, without disturbing the daily practices. 
-                                     </br></br></br>
+                                     Design and innovations is not solely about providing solutions. It is about <font style="font-size: 135%; color: rgb(242,103,33)">changing a mindset</font>, and implementing the solution seamlessly into the daily operations. We are able to <font style="font-size: 135%; color: rgb(242,103,33)">create support for the solution</font>, and gradually implement the solution into the Brand DNA, without disturbing the daily practices. 
+                                     </br></br>
                                 </div>
                                 </div>
                             </div>
@@ -432,19 +430,19 @@
                                 <a class="wow fadeInDown" href="">Evaluating Outcome</a>
                             </dt>
                             <dd>
-                                In order to create a lasting impact, it is of importance to evaluate whether the innovations works. If needed the solution can be improved in an iterative way. 
+                                In order to create a lasting impact, it is of importance to evaluate whether the innovations works. If needed the solution can be improved in an <font style="color: rgb(242,103,33)">iterative way</font>. Hereby, the 'Design Intervention' process should not necessarily be seen as a linear, but rather a <font style="color: rgb(242,103,33)">parallel process</font>.  
                             </dd>
                             <dt>
                                 <a class="wow fadeInDown" href="">Educating Stakeholder</a>
                             </dt>
                             <dd>
-                                In this stage, it is important to start embedding the design by changing the mindset. This is to make sure that, through a close collaboration with the stakeholders, the changes in the processes are made permanent. Because of the many different stakeholders, it is important to speak in their language, which is mainly a business language. The model will be explained through KPI's, and implemented into business models. 
+                                It is important to start embedding the design by changing the mindset. This is to make sure that, through a close collaboration with the stakeholders, the changes in the processes are <font style="color: rgb(242,103,33)">made permanent</font>. Because of the many different stakeholders, it is important to <font style="color: rgb(242,103,33)">speak in their language</font>, which is mainly a business language. The model will be explained through KPI's, and implemented into business models. 
                             </dd>
                             <dt>
                                 <a class="wow fadeInDown" href="">Create Acceptance</a>
                             </dt>
                             <dd>
-                                It is important to make sure that the strategic work that is executed is really adopted by the company in the long term. Not only the management, but the whole company should be convinced about the success of the outcomes, and the need to follow up on these outcomes. Especially to use design, and a human-centered approach, as the main driver of innovation. 
+                                Lastly, it is essential to make sure that the strategic work that is executed is really adopted by the company in the <font style="color: rgb(242,103,33)">long term</font>. Not only the management, but the whole company should be convinced about the success of the outcomes, and the need to follow up on these outcomes. Especially to use design, and a <font style="color: rgb(242,103,33)">human-centered approach</font>, as the main driver of innovation. 
                             </dd>
                         </dl>
                         <!-- accordion time line end-->
